# Descent3

./: README.md  testroom.d3l
code/renderer/: CMakeLists.txt  HardwareClipper.cpp  HardwareDraw.cpp  HardwareGlobalVars.cpp  HardwareInstance.cpp  HardwareInternal.h  HardwareOpenGL.cpp  HardwarePoints.cpp  HardwareSetup.cpp  HardwareTransforms.cpp  RendererConfig.h  gl_image.cpp  gl_init.cpp  gl_main.cpp  gl_render.cpp  gl_rendertexture.cpp  gl_rendertexture.h  gl_shaders.cpp  gl_shaders.h  glew.c  renderer.cpp  tr_clipper.cpp  tr_draw.cpp  tr_globalvars.cpp  tr_instance.cpp  tr_local.h  tr_main.cpp  tr_points.cpp  tr_setup.cpp  tr_transforms.cpp
code/renderer/GL/: eglew.h  glew.h  glxew.h  wglew.h
code/scripts/: AIGame.cpp  AIGame3.cpp  AIGame3_External.h  BatteriesIncluded.cpp  BossCamera.cpp  CMakeLists.txt  CanyonsCTF.cpp  CellTestLevel.cpp  ChrisTest.cpp  DallasFuncs.cpp  GameGauge.cpp  Geodomes.cpp  HalfPipe.cpp  InfernalBolt.cpp  Inversion.cpp  LEVEL0.cpp  LEVEL15.cpp  Level12.cpp  Level16.cpp  Level6.cpp  Level9.cpp  LevelS1.cpp  Merc02.cpp  Merc1.cpp  Merc3.cpp  Merc4.cpp  Merc6.cpp  Merc7.cpp  Mysterious_Isle.cpp  PINBALL.CPP  Paranoia.cpp  PiccuStation.cpp  Polaris.cpp  Quadsomniac.cpp  RudeAwakening.cpp  SewerRat.cpp  TrainingMission.cpp  Y2K.cpp  aigame2.cpp  aigame4.cpp  (+29 more)
code/scripts/lnx/: osiris_common.h  osiris_import.h  osiris_vector.h
editor/: CMakeLists.txt  LoadLevel.cpp  ambient.cpp  bnode.cpp  boa.cpp  gamepath.cpp  ned.dsw  postrender.cpp  readme.txt  room.cpp  ship.cpp  terrain.cpp  terrainrender.cpp
editor/2dlib/: 2dlib.dep  2dlib.dsp  2dlib.mak  Makefile  font.cpp  hardsurf.cpp  lib2d.h  memsurf.cpp  pen.cpp  pentext.cpp  screen.cpp  surface.cpp  viewport.cpp
editor/3d/: 3d.dep  3d.dsp  3d.mak  CLIPPER.cpp  Clipper.h  DRAW.cpp  GLOBVARS.cpp  Globvars.h  INSTANCE.cpp  MATRIX.cpp  Makefile  POINTS.cpp  SETUP.cpp
editor/NewEditor/: BendDialog.cpp  BendDialog.h  CameraSlew.cpp  CameraSlew.h  ChildFrm.cpp  ChildFrm.h  ChildView.cpp  ChildView.h  DoorwayDialogBar.cpp  DoorwayDialogBar.h  EditLineDialog.cpp  EditLineDialog.h  ExtrudeDialog.cpp  ExtrudeDialog.h  FileNewDialog.cpp  FileNewDialog.h  FolderDialog.cpp  FolderDialog.h  GoalDialog.cpp  GoalDialog.h  GrListBox.cpp  GrListBox.h  HogBrowser.cpp  HogBrowser.h  LatheDialog.cpp  LatheDialog.h  LevelFrame.cpp  LevelFrame.h  LevelInfoDialog.cpp  LevelInfoDialog.h  LightingDialog.cpp  LightingDialog.h  LightingProgress.cpp  LightingProgress.h  ListDialog.cpp  ListDialog.h  LoadLevel.cpp  MainFrm.cpp  MainFrm.h  MatcenDialog.cpp  (+121 more)
editor/NewEditor/res/: NewEditor.rc2
editor/bitmap/: Makefile  bitmain.cpp  bitmap.dep  bitmap.dsp  bitmap.mak  bumpmap.cpp  iff.cpp  iff.h  lightmap.cpp  pcx.cpp  tga.cpp
editor/cfile/: CFILE.cpp  InfFile.cpp  Makefile  cfile.dep  cfile.dsp  cfile.mak  hog.cpp
editor/data/scripts/: AIGame3_External.h  linux_lib.h  osiris_common.h
editor/ddgr_win32/: ddgrWin32.h  ddgrWin32API.cpp  ddgrWin32DX.cpp  ddgrWin32DX.h  ddgrWin32GDI.cpp  ddgrWin32GDI.h  ddgrWin32Init.cpp  ddgr_win32.dep  ddgr_win32.dsp  ddgr_win32.mak
editor/ddio_common/: Makefile  ddio.cpp  ddio_common.dep  ddio_common.dsp  ddio_common.mak  key.cpp
editor/ddio_win/: ddio_win.dep  ddio_win.dsp  ddio_win.h  ddio_win.mak  winfile.cpp  winforcefeedback.cpp  winio.cpp  winkey.cpp  winmouse.cpp  wintimer.cpp
editor/ddvid_win32/: ddvid_win32.dep  ddvid_win32.dsp  ddvid_win32.mak  ddvidlib.h  vidWin32FS.cpp  vidWin32Win.cpp  video_win32.cpp
editor/editor/: DallasImportDlg.cpp  DallasImportDlg.h  DallasSoundDlg.cpp  DallasSoundDlg.h  DallasStrmAudioDlg.cpp  DallasStrmAudioDlg.h  DallasUserTypesDlg.cpp  DallasUserTypesDlg.h  DallasVectorPromptDialog.cpp  DallasVectorPromptDialog.h  EPath.cpp  EPath.h  Erooms.cpp  Erooms.h  Group.cpp  HRoom.cpp  HRoom.h  HTexture.cpp  HTexture.h  HView.h  ObjMoveManager.h  ObjectListCombo.cpp  ObjectListCombo.h  RoomListCombo.cpp  RoomListCombo.h  RoomUVs.cpp  RoomUVs.h  SelManager.cpp  SelManager.h  SoundListCombo.cpp  SoundListCombo.h  TriggerListCombo.cpp  TriggerListCombo.h  d3edit.h  dallasflagdlg.cpp  dallasflagdlg.h  dallasgenericpromptdlg.cpp  dallasgenericpromptdlg.h  dallasmaindlg.cpp  dallasmaindlg.h  (+16 more)
editor/fix/: Makefile  fix.cpp  fix.dep  fix.dsp  fix.mak
editor/lib/: 3d.h  AppDatabase.h  Application.h  Byteswap.h  Cfile.h  DDAccess.h  Ddgr.h  Debug.h  FindIntersection.h  InfFile.h  Macros.h  TaskSystem.h  aiambient.h  aimain.h  aistruct.h  aistruct_external.h  ambient.h  args.h  bitmap.h  bnode.h  boa.h  bsp.h  buildno.h  bumpmap.h  collide.h  config.h  d3x_op.h  damage.h  damage_external.h  ddio.h  ddio_common.h  ddvid.h  deathinfo.h  deathinfo_external.h  descent.h  difficulty_external.h  door.h  doorway.h  findintersection_external.h  fireball.h  (+92 more)
editor/mem/: Makefile  Mem.cpp  mem.dep  mem.dsp  mem.mak
editor/misc/: Makefile  endian.cpp  error.cpp  logfile.cpp  misc.dep  misc.dsp  misc.mak  psglob.cpp  psrand.cpp  pstring.cpp  str.cpp
editor/module/: Makefile  module.cpp  module.dep  module.dsp  module.mak
editor/ned_physics/: ned_physics.dsp
editor/ned_virtualgcc/: ned_virtualgcc.dsp
editor/ned_virtualms/: ned_virtualms.dsp
editor/physics/: FindIntersection.cpp  newstyle_fi.cpp  physics_common.cpp
editor/texmap/: Makefile  drawquad.h  drawtex.h  flat_poly.h  leftedge.h  lmap_gouraud.h  quadleftedge.h  quadrightedge.h  rightedg.h  texdisk.cpp  texfix.cpp  texfix.h  texmap.dep  texmap.dsp  texmap.mak  texture.cpp  tmap_4444.h  tmap_alpha16.h  tmap_flat.h  tmap_flat16.h  tmap_lca.h  tmap_ll.h  tmap_ll16.h  tmap_ll16a.h  tmap_lla.h  tmap_llta.h  tmap_lta.h  tmap_lua.h  tmap_mac_plta.h  tmap_mac_tri_lla.h  tmap_pc.h  tmap_perflat.h  tmap_perflat16.h  tmap_pl.h  tmap_pl16.h  tmap_pl16a.h  tmap_pla.h  tmap_plta.h  tmap_pu.h  tmap_pua.h  (+3 more)
editor/vecmat/: Makefile  fix.cpp  vecmat.dep  vecmat.dsp  vecmat.mak  vector.cpp
editor/virtualgcc/: virtualgcc.cpp
editor/virtualms/: virtualMS.cpp
editor/win32/: win32.dep  win32.dsp  win32.mak  win32os.h  winapp.cpp  wincon.cpp  wincore.cpp  windata.cpp  windebug.cpp  winmono.cpp  wintask.cpp
(+1096 files in other folders)
